--- a/style.css
+++ b/style.css
@@ -17,7 +17,13 @@ h1, h2, h3, h4, h5, a {
 }
 
 h1 {
-    margin-top: 10rem;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+   
+    
     font-weight: 900;
     padding: 2rem;
     color: white;
